@@ -4,6 +4,7 @@
     * Updated the error message displayed when loading FMUs with needsExecutionTool set to True.
     * Loading unzipped FMUs now also works with relative paths.
     * Enabled setting logging categories in FMI2 via "set_debug_logging".
+    * Logs exceeding maximal size will now be truncated to start/end of last CAPI call not exceeding maximal size.
 
 --- PyFMI-2.13.1 ---
     * Numpy 2.x support
